Update readme, add comments to index.js, and make views more informative

--- a/views/contact.html
+++ b/views/contact.html
@@ -5,6 +5,10 @@
   <title>Document</title>
 </head>
 <body>
-  cell: 415-555-1234
+  Hi! I'm Vikash.
+  <br>
+  My number is 404-395-9880.
+  <br>
+  And my e-mail is <a href="mailto:vikash.k.parekh@gmail.com">vikash.k.parekh@gmail.com</a>
 </body>
 </html>
