--- a/views/home.html
+++ b/views/home.html
@@ -5,6 +5,8 @@
   <title>home</title>
 </head>
 <body>
-  
+  <b>This is your home page rendered using the following code:</b> <br>
+  var home_path = path.join(views, "home.html"); <br>
+  res.sendFile( home_path );
 </body>
 </html>
